# content-loader

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONFLUENCE_LOADER.md  DETAILED_DESIGN.md  GITHUB_LOADER.md  IMPLEMENTATION_CHECKLIST.md  README.md  SLACK_LOADER.md  docker-compose.yml  main.py  pyproject.toml  setup.cfg
content_loader/: __init__.py
content_loader/core/: __init__.py  base.py  config.py  exceptions.py  executor.py  models.py
content_loader/core/models/: __init__.py  base.py  processing.py  source.py
content_loader/loaders/demo/: __init__.py  executor.py
content_loader/services/: __init__.py  document_processor.py  embedding_service.py  vector_store.py
docs/: ARCHITECTURE.md  CONFLUENCE_LOADER.md  DETAILED_DESIGN.md  EMBEDDING_AND_STORAGE.md  GITHUB_LOADER.md  IMPLEMENTATION_CHECKLIST.md  SLACK_LOADER.md
